--- a/css/blog.scss
+++ b/css/blog.scss
@@ -7,7 +7,7 @@ img{max-width:100%}
 #content{display:block;padding-bottom:130px}
 .mdl-mini-footer{position:absolute;bottom:0;right:0;left:0;white-space:nowrap;max-height:96px}
 @media screen and (max-width:532px){.mdl-mini-footer{padding:16px}}
-#logolink{position:absolute;padding:15px}
+#logolink{position:absolute;padding:15px;top:0}
 .is-small-screen #logolink{padding:5px}
 .mdl-layout__content{flex-shrink:0;}
 .mdl-menu .mdl-menu__item{text-align:right}
